Updated maven configuration and dependencies